fix contact send animation on mobile

--- a/resources/sass/layouts/footer.scss
+++ b/resources/sass/layouts/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     text-align: center;
     margin: 0 auto;
-    padding: 20px 0 40px;
+    padding: 40px 0 40px;
     /*&:before {
         content: " ";
         display: block;
